# fioxa

./: flake.nix
apps/: Cargo.toml
apps/calc/src/: main.rs
apps/kitty/: Cargo.toml
apps/kitty/src/: fs.rs  main.rs
apps/net/: Cargo.toml
apps/net/src/: main.rs
apps/terminal/: Cargo.toml
apps/terminal/src/: main.rs
apps/test_capnp/: Cargo.toml
apps/test_capnp/src/: main.rs
builder/src/: main.rs
drivers/: Cargo.toml
drivers/.cargo/: config.toml
drivers/amd_pcnet/: Cargo.toml
drivers/amd_pcnet/src/: main.rs
drivers/fat/: Cargo.toml
drivers/fat/src/: fat.rs  main.rs
drivers/ps2/: Cargo.toml
drivers/ps2/src/: main.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: bootfs.rs  console.rs  elf.rs  main.rs  object.rs  serial.rs
kernel/src/driver/disk/: ahci.rs
kernel/src/driver/disk/ahci/: port.rs
kernel/src/fs/: fat.rs  mbr.rs  mod.rs
kernel/src/interrupts/: mod.rs
kernel/src/net/: ethernet.rs
kernel/src/pci/: mod.rs
kernel/src/scheduling/: process.rs
kernel/src/screen/: mouse.rs
libs/: Cargo.toml
libs/fioxa_rpc/: Cargo.toml  build.rs
libs/fioxa_rpc/schema/: disk.capnp  echo.capnp  elf.capnp  fs.capnp  interrupt.capnp  net.capnp  pci.capnp  registry.capnp  rpc.capnp
libs/fioxa_rpc/src/: client.rs  elf.rs  fs.rs  interrupt.rs  lib.rs  pci.rs  server.rs  service.rs
libs/kernel_userspace/: Cargo.toml
libs/kernel_userspace/src/: channel.rs  elf.rs  interrupt.rs  lib.rs  message.rs  net.rs  process.rs
libs/userspace/: Cargo.toml
