[workspace]
resolver = "3"
members = ["amd_pcnet", "ps2"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
fioxa_rpc = { path = "../libs/fioxa_rpc" }
kernel_sys = { path = "../libs/kernel_sys" }
kernel_userspace = { path = "../libs/kernel_userspace" }
userspace = { path = "../libs/userspace" }
userspace_slaballoc = { path = "../libs/userspace_slaballoc" }

capnp = { version = "0.25.3", default-features = false, features = ["alloc"] }
spin = "0.10.0"
x86_64 = "0.15"
