[package]
name = "kernel_userspace"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input.workspace = true
kernel_sys.workspace = true

bitflags.workspace = true
hashbrown.workspace = true
heapless.workspace = true
lock_api.workspace = true
num-derive.workspace = true
num-traits.workspace = true
numeric-sort.workspace = true
spin.workspace = true
thiserror.workspace = true
